(library
 (name parsing_utils_test)
 (public_name parsing-utils-tests.parsing_utils_test)
 (inline_tests)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries parsing_utils)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
